allow deletion of cities to completely abandon it
