# models/api_default.go
@@ -349,6 +349,96 @@ func (a *DefaultAPIService) V1CitiesCityidBuildingqitemsPostExecute(r ApiV1Citie
 	return localVarHTTPResponse, nil
 }
 
+type ApiV1CitiesCityidDeleteRequest struct {
+	ctx context.Context
+	ApiService *DefaultAPIService
+	cityid string
+}
+
+func (r ApiV1CitiesCityidDeleteRequest) Execute() (*http.Response, error) {
+	return r.ApiService.V1CitiesCityidDeleteExecute(r)
+}
+
+/*
+V1CitiesCityidDelete Delete a city.
+
+ @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
+ @param cityid
+ @return ApiV1CitiesCityidDeleteRequest
+*/
+func (a *DefaultAPIService) V1CitiesCityidDelete(ctx context.Context, cityid string) ApiV1CitiesCityidDeleteRequest {
+	return ApiV1CitiesCityidDeleteRequest{
+		ApiService: a,
+		ctx: ctx,
+		cityid: cityid,
+	}
+}
+
+// Execute executes the request
+func (a *DefaultAPIService) V1CitiesCityidDeleteExecute(r ApiV1CitiesCityidDeleteRequest) (*http.Response, error) {
+	var (
+		localVarHTTPMethod   = http.MethodDelete
+		localVarPostBody     interface{}
+		formFiles            []formFile
+	)
+
+	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "DefaultAPIService.V1CitiesCityidDelete")
+	if err != nil {
+		return nil, &GenericOpenAPIError{error: err.Error()}
+	}
+
+	localVarPath := localBasePath + "/v1/cities/{cityid}"
+	localVarPath = strings.Replace(localVarPath, "{"+"cityid"+"}", url.PathEscape(parameterValueToString(r.cityid, "cityid")), -1)
+
+	localVarHeaderParams := make(map[string]string)
+	localVarQueryParams := url.Values{}
+	localVarFormParams := url.Values{}
+
+	// to determine the Content-Type header
+	localVarHTTPContentTypes := []string{}
+
+	// set Content-Type header
+	localVarHTTPContentType := selectHeaderContentType(localVarHTTPContentTypes)
+	if localVarHTTPContentType != "" {
+		localVarHeaderParams["Content-Type"] = localVarHTTPContentType
+	}
+
+	// to determine the Accept header
+	localVarHTTPHeaderAccepts := []string{}
+
+	// set Accept header
+	localVarHTTPHeaderAccept := selectHeaderAccept(localVarHTTPHeaderAccepts)
+	if localVarHTTPHeaderAccept != "" {
+		localVarHeaderParams["Accept"] = localVarHTTPHeaderAccept
+	}
+	req, err := a.client.prepareRequest(r.ctx, localVarPath, localVarHTTPMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, formFiles)
+	if err != nil {
+		return nil, err
+	}
+
+	localVarHTTPResponse, err := a.client.callAPI(req)
+	if err != nil || localVarHTTPResponse == nil {
+		return localVarHTTPResponse, err
+	}
+
+	localVarBody, err := io.ReadAll(localVarHTTPResponse.Body)
+	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = io.NopCloser(bytes.NewBuffer(localVarBody))
+	if err != nil {
+		return localVarHTTPResponse, err
+	}
+
+	if localVarHTTPResponse.StatusCode >= 300 {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: localVarHTTPResponse.Status,
+		}
+		return localVarHTTPResponse, newErr
+	}
+
+	return localVarHTTPResponse, nil
+}
+
 type ApiV1CitiesCityidGetRequest struct {
 	ctx context.Context
 	ApiService *DefaultAPIService
